<resources>
    <string name="app_name">NUMAD22Fa_Team27</string>
    <string name="txt_team_name">Team 27</string>
    <string name="btn_A7">At Your Service</string>
    <string name="btn_A8">Stick It To \'Em</string>
    <string name="btn_proj">ShapeUp</string>
    <string name="artist_image">artist image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_button_description">Search</string>
    <string name="search_fragment_artist">Seed Artists</string>
    <string name="search_fragment_artist_hint">Comma-separated names</string>
    <string name="search_fragment_song">Seed Tracks</string>
    <string name="search_fragment_song_hint">Comma-separated names</string>
    <string name="search_fragment_genre">Seed Genre</string>
    <string name="search_fragment_tempo_toggle">Use Tempo</string>
    <string name="search_fragment_pop_toggle">Use Popularity</string>
    <string name="search_fragment_search">Get Recommendations!</string>
    <string name="txt_welcome">Welcome</string>
    <string name="btn_about">About</string>
    <string name="add_friend_desc">Add Friend</string>

    <!-- Sticker activity -->
    <string name="sticker_notification_channel">STICKER_NOTIFICATION</string>
    <string name="sticker_fragment_send">Send</string>
    <string name="sticker_fragment_cancel">Cancel</string>
    <string name="sticker_fragment_friend_spinner">Friends List</string>
    <string name="sticker_fragment_sticker_spinner">Stickers List</string>
    <string name="sticker_notification_channel_description">Notifications for the Sticker activity</string>
    <string name="welcome">Welcome To ShapeUp</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="create_account_message">Don\'t have an account? Create one here</string>
    <string name="sign_up_btn">Sign Up</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="have_an_account_txt">Already have an account? Sign in here</string>
    <string name="profUsername">TextView</string>
    <string name="my_workouts">My Workouts</string>
    <string name="friend_workouts">Workouts</string>
    <string name="my_friends">My Friends</string>
    <string name="my_friend_friends">Friends</string>
    <string name="my_groups">My Groups</string>
    <string name="my_messages">My Messages</string>
    <string name="settings">Settings</string>
    <string name="profilepic">profilePic</string>
    <string name="remove_friend">Remove</string>

    <!-- Workout app -->
    <string name="workout_endurance_description">The ability of the body’s systems to gather, process, and deliver oxygen</string>
    <string name="workout_stamina_description">The ability of body systems to process, deliver, store, and utilize energy</string>
    <string name="workout_strength_description">The ability of a muscular unit, or combination of muscular units, to apply force</string>
    <string name="workout_flexibility_description">The ability to maximize the range of motion at a given joint</string>
    <string name="workout_power_description">The ability of a muscular unit, or combination of muscular units, to apply maximum force in minimum time</string>
    <string name="workout_speed_description">The ability to minimize the cycle time of a repeated movement</string>
    <string name="workout_coordination_description">The ability to combine several distinct movement patterns into a singular distinct movement</string>
    <string name="workout_agility_description">The ability to minimize transition time from one movement pattern to another</string>
    <string name="workout_balance_description">The ability to control the placement of the body’s center of gravity in relation to its support base</string>
    <string name="workout_accuracy_description">The ability to control movement in a given direction or at a given intensity</string>

    <string name="workout_search">Search for Workouts</string>
    <string name="category">Category</string>
    <string name="workout_category_dropdown">Workout Category Dropdown</string>
    <string name="friends_search">Search for Friends</string>
    <string name="sort_by">Sort By</string>
    <string name="search_for_groups">Search for Groups</string>
    <string name="search">Search</string>

    <!-- Workout app - cards-->
    <string name="user_card_friend_name">FRIEND NAME</string>
    <string name="user_card_message_preview">Message preview ....</string>
    <string name="user_workout_card_name">WORKOUT NAME</string>
    <string name="user_workout_card_category">CATEGORY</string>
    <string name="user_workout_card_progress_text">##%</string>
    <string name="user_workout_card_badge_text">x#</string>
    <string name="search_hint">Search...</string>

    <string name="title_activity_workout_list">WorkoutList</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="leader_board">Leader Board</string>
    <string name="workout">Workout</string>
    <string name="profile">Profile</string>
    <string name="workoutDiagram">WorkoutDiagram</string>
    <string name="completed"> - Completed</string>
    <string name="title_goes_here">Title goes here</string>
    <string name="login_banner">login_banner</string>
    <string name="log_in_btn">Log In</string>
    <string name="sign_out">Sign Out</string>
<<<<<<< HEAD
    <string name="saveBtn">Save</string>
    <string name="cancelBtn">Back</string>
    <string name="friend_pic">friend_pic</string>

    <string name="workout_search">Search for Workouts</string>
    <string name="category">Category</string>
    <string name="workout_category_dropdown">Workout Category Dropdown</string>
    <string name="friends_search">Search for Friends</string>
    <string name="sort_by">Sort By</string>
    <string name="search_for_groups">Search for Groups</string>
    <string name="search">Search</string>

    <!-- Workout app - cards-->
    <string name="user_card_friend_name">FRIEND NAME</string>
    <string name="user_card_message_preview">Message preview ....</string>
    <string name="user_workout_card_name">WORKOUT NAME</string>
    <string name="user_workout_card_category">CATEGORY</string>
    <string name="user_workout_card_progress_text">##%</string>
    <string name="user_workout_card_badge_text">x#</string>
    <string name="search_hint">Search...</string>

    <string name="title_activity_workout_list">WorkoutList</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="leader_board">Leader Board</string>
    <string name="workout">Workout</string>
    <string name="profile">Profile</string>
    <string name="workoutDiagram">WorkoutDiagram</string>
    <string name="completed"> - Completed</string>
    <string name="title_goes_here">Title goes here</string>
=======
>>>>>>> master
    <string name="workout_list_activity">Workout List Activity</string>
    <string name="workout_list">Workout List</string>
    <string name="instructions">Instructions</string>

    <string name="workout_name">Workout Name</string>
    <string name="difficulty">Difficulty:</string>
    <string name="categories">Categories:</string>
    <string name="close">close</string>
    <string name="group_name">Group Name</string>
    <string name="members">Members:</string>
    <string name="join">Join</string>
    <string name="friends">Friends:</string>
    <string name="groups_joined">Groups Joined:</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="add">Add</string>
    <string name="test">test</string>
    <string name="no_results">No results found. Reminder: searching is case sensitive!</string>
</resources>