<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/title_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:text="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_user_avatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_username"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/profile_picture" />

    <TextView
        android:id="@+id/txt_friend_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friends"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_username" />

    <TextView
        android:id="@+id/txt_group_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/groups_joined"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_friend_count" />

<!-- Programmatically change to remove if user is already friends, or hide if self -->
    <Button
        android:id="@+id/btn_friend_action"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_close_user"
        app:layout_constraintTop_toBottomOf="@+id/txt_group_count" />

    <Button
        android:id="@+id/btn_close_user"
        android:layout_width="85dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:text="@string/close"
        app:layout_constraintEnd_toStartOf="@+id/btn_friend_action"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_group_count" />

</androidx.constraintlayout.widget.ConstraintLayout>