<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_workout"
        android:icon="@drawable/workout_icon"
        android:iconTint="@color/md_theme_light_onPrimary"
        android:title="@string/workout"
        app:showAsAction="always" />
    <item
        android:id="@+id/nav_groups"
        android:icon="@drawable/groups_icon"
        android:iconTint="@color/md_theme_light_onPrimary"
        android:title="Groups"
        app:showAsAction="always" />
    <item android:title="HIDDEN"/>
    <item
        android:id="@+id/nav_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/user_icon"
        android:iconTint="@color/md_theme_light_onPrimary"
        android:title="@string/profile"
        app:showAsAction="always" />
    <item
        android:id="@+id/nav_leaderboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/leaderboard_icon"
        android:iconTint="@color/md_theme_light_onPrimary"
        android:title="@string/leader_board"
        app:showAsAction="always" />
</menu>