<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="24dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="true"
        android:layout_marginHorizontal="24dp"
        app:cardElevation="7dp"
        app:cardCornerRadius="15dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_workout_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/title_goes_here"
                android:textSize="16dp"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:lines="2"/>


            <ImageView
                android:id="@+id/img_workout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/workoutDiagram"/>

            <Button
                android:id="@+id/btn_instructions"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/instructions"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <CheckBox
                android:id="@+id/ckb_completed"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_workout_list_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:text="@string/completed"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>