<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_theme_light_primary"
        tools:context=".workout.activity.RegisterActivity">

        <TextView
            android:id="@+id/welcome_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/poppins_black"
            android:text="@string/welcome"
            android:textColor="@color/md_theme_light_onPrimary"
            android:textSize="48sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/activity_horizontal_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_register"
            app:layout_constraintVertical_bias="0.2">

            <EditText
                android:id="@+id/register_EmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_horizontal_margin"
                android:drawableStart="@drawable/email"
                android:drawablePadding="8dp"
                android:drawableTint="@color/md_theme_light_inversePrimary"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textColor="@color/md_theme_light_onPrimary"
                android:textColorHint="@color/md_theme_light_inversePrimary" />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:drawableStart="@drawable/password"
                android:drawablePadding="8dp"
                android:drawableTint="@color/md_theme_light_inversePrimary"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/md_theme_light_onPrimary"
                android:textColorHint="@color/md_theme_light_inversePrimary" />

            <EditText
                android:id="@+id/repeat_register_Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:drawableStart="@drawable/password"
                android:drawablePadding="8dp"
                android:drawableTint="@color/md_theme_light_inversePrimary"
                android:ems="10"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textColor="@color/md_theme_light_onPrimary"
                android:textColorHint="@color/md_theme_light_inversePrimary" />

            <Button
                android:id="@+id/btn_signup"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/activity_vertical_margin"
                android:backgroundTint="@color/md_theme_light_onPrimary"
                android:gravity="center"
                android:text="@string/sign_up_btn"
                android:textColor="@color/md_theme_light_primary" />
            <Button
                android:id="@+id/already_have_account"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/md_theme_light_primary"
                android:text="@string/have_an_account_txt"
                android:textColor="@color/md_theme_light_onPrimary" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressbar_register"
            style="@android:style/Widget.Material.Light.ProgressBar.Large"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="#56313033"
            android:elevation="20dp"
            android:indeterminate="true"
            android:indeterminateTint="@color/md_theme_light_onPrimary"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>